@@ -9,6 +9,8 @@
 	at the beginning of the list of path to search, even if they
 	are already listed (one might want to use LD_LIBRARY_PATH to
 	change the search order).
+	* scripts/dpkg-source.pl: Fix regex used to identify the extension
+	of the orig.tar.{gz,bz2,lzma} file.
 
 2007-11-21  Raphael Hertzog  <hertzog@debian.org>
 
